Finalizei a logica do cabeçalho, e reorganizei o arquivo routeGuard.js

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         </li>
                         
                         <li class="item_menu">
-                            <a class="ancora menu_sair detalhe_menu" href="./index.html">
+                            <a class="ancora menu_sair detalhe_menu" href="">
                                 Sair
                             </a>
                         </li>
@@ -88,8 +88,8 @@
                 </dialog>
 
                 <ul class="navegacao__lista">
-                    <li class="item--nav">
-                        <a class="ancora" href="./html/ngo.html">ONGs</a>
+                    <li class="">
+                        <a class="item--nav ancora ancora--btn" href="./html/ngo.html">ONGs</a>
                     </li>
 
                     <li class="item_hover--nav">
@@ -138,26 +138,26 @@
                         </ul>
                     </li>
 
-                    <li class="item--nav">
-                        <a class="ancora" href="./html/event_campaign.html">
+                    <li class="">
+                        <a class="item--nav ancora ancora--btn" href="./html/event_campaign.html">
                             Eventos/Campanhas
                         </a>
                     </li>
 
-                    <li class="item--nav">
-                        <a class="ancora" href="./html/profile.html">
+                    <li class="">
+                        <a class="item--nav ancora ancora--btn ancora--btn" href="./html/profile.html">
                             Perfil
                         </a>
                     </li>
 
-                    <li class="item--nav">
-                        <a class="ancora menu_entrar" href="./html/home_log_in.html">
+                    <li class="">
+                        <a class="item--nav ancora menu_entrar ancora--btn" href="./html/home_log_in.html">
                             Entrar
                         </a>
                     </li>
 
-                    <li class="item--nav">
-                        <a class="ancora menu_sair" href="./html/home_log_in.html">
+                    <li class="">
+                        <a class="item--nav ancora menu_sair ancora--btn" href="">
                             Sair
                         </a>
                     </li>
@@ -187,8 +187,8 @@
                         </ul>
                     </li>
 
-                    <li class="item--nav">
-                        <a class="ancora" href="./html/profile.html">
+                    <li class="">
+                        <a class="item--nav ancora" href="./html/profile.html">
                             Perfil
                         </a>
                     </li>
@@ -339,16 +339,6 @@
 
     <script src="./js/modules/Dialog.js"></script>
     <script src="./js/components/menu.js"></script>
-    <script src="./js/modules/Mensagem.js"></script>
-    <script src="./js/helpers/AlertaHelper.js"></script>
-    <script src="./js/helpers/ValidacaoHelper.js"></script>
-    <script src="./js/helpers/SenhasHelper.js"></script>
-    <script src="./js/views/ListaErros.js"></script>
-    <script src="./js/views/ListaMensagens.js"></script>
-    <script src="./js/views/MensagemView.js"></script>
-    <script src="./js/services/SenhasProxyFactory.js"></script>
-    <script src="./js/services/RedirecionaFactory.js"></script>
-    <script type="module" src="./js/controllers/registerControl.js"></script>
     <script type="module" src="./js/controllers/isLoggedController.js"></script>
 </body>
 </html>
